--- a/fullstack-portfolio/portfolio-backend/projects.json
+++ b/fullstack-portfolio/portfolio-backend/projects.json
@@ -3,12 +3,12 @@
       "name": "Frogger",
       "live": "https://estrellaalvarez.github.io/Frogger/",
       "git": "https://github.com/estrellaalvarez/Frogger",
-      "image": "http://www.imgur.com/pictureofproject.png"
+      "image": "https://i.imgur.com/eruxB3l.png"
     },
     {
       "name": "KIBI",
       "live": "https://kibi-e-commerce.herokuapp.com/",
       "git": "https://github.com/ShorenaK/KIBI-E-COMMERCE-STORE",
-      "image": "http://www.imgur.com/pictureofproject.png"
+      "image": "https://i.imgur.com/Hq39B3S.png"
     }
   ]
