--- a/fullstack-portfolio/portfolio-backend/package.json
+++ b/fullstack-portfolio/portfolio-backend/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/estrellaalvarez/portfolio-backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
